# Who_Got_Next

./: .gitignore  README.md  docker-compose.yaml  package.json
backend/: .gitignore  pyproject.toml
backend/src/: main.py
backend/src/database/: db_engine.py  db_srv.py
backend/src/database/tables/: event.py  field.py  message.py  sports_equipment.py  user.py
backend/src/manager/: EventManager.py  FieldManager.py  MessageManager.py  UserManager.py
backend/src/routers/: event.py  events.py  field.py  fields.py  index.py  message.py  messages.py  user.py  users.py
backend/src/schema/: event.py  field.py  message.py  sports_equipment.py  user.py
backend/src/scripts/: sport_data_import.py
backend/src/utils/: data_sport_importer.py  env.py  error_handelers.py  fake.py  firebase.py  log.py
frontend/: .gitignore  index.html  package.json  prettierrc  readme front  vite.config.ts
frontend/src/: App.jsx  App.tsx  Join.jsx  firebase-config.js  main.tsx
frontend/src/components/Button/: index.js  index.jsx
frontend/src/components/CartEvenement/: index.jsx
frontend/src/components/Connexion/: index.jsx
frontend/src/components/Map/: index.js  index.jsx  styles.css
frontend/src/components/PopUp/: Container.jsx  Form.jsx  Modal.jsx  Trigger.jsx
frontend/src/components/Spinner/: index.jsx  styles.css
frontend/src/components/ToogleSwitch/: ToggleSwitch.jsx
frontend/src/components/TopNavigation/: TopNavigation.jsx
frontend/src/components/banderole/: index.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/services/: mapFetch.js
(+77 files in other folders)
